objects/Coaching_Session_Question__c.object
<CustomObject>
    <fields>
        <fullName>Coaching_Question_Category__c</fullName>
        <description>A list of descriptors which helps to further define and categorize a coaching question.</description>
        <label>Coaching Question Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Coaching_Question_Categories</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Coaching_Question__c</fullName>
        <description>The actual question being asked during a coaching session.</description>
        <label>Coaching Question</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coaching_Session__c</fullName>
        <description>Each Coaching Session Question is part of a Coaching Session.</description>
        <label>Coaching Session</label>
        <referenceTo>Coaching_Session__c</referenceTo>
        <relationshipLabel>Coaching Session Questions</relationshipLabel>
        <relationshipName>Coaching_Session_Questions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <description>Add additional comments related to this coaching question.</description>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Max_Score__c</fullName>
        <description>The maximum number of points that can be earned for this question.</description>
        <label>Max Score</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Question_Number__c</fullName>
        <description>This is the order assigned to a question according to the questions type.</description>
        <label>Question Number</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Response_Scale__c</fullName>
        <description>Describes which baseline scoring model should be applied for an individual question.</description>
        <inlineHelpText>Do not attempt to change.</inlineHelpText>
        <label>Response Scale</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Coaching_Question_Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Boolean</fullName>
                </value>
                <value>
                    <fullName>3 Point</fullName>
                </value>
                <value>
                    <fullName>5 Point</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Response_Set_Code__c</fullName>
        <description>Controls the set of available responses for the user.</description>
        <label>Response Set Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <description>List of the responses for all coaching questions.  The displayed responses will be controlled by the response code and is based on the individual question type.</description>
        <label>Response</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Response_Scale__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Met Expectations</fullName>
                </value>
                <value>
                    <fullName>Partially Met Expectations</fullName>
                </value>
                <value>
                    <fullName>Did Not Meet Expectations</fullName>
                </value>
                <value>
                    <fullName>Remarkable</fullName>
                </value>
                <value>
                    <fullName>Often Exceeds Expectations</fullName>
                </value>
                <value>
                    <fullName>Expectations Met</fullName>
                </value>
                <value>
                    <fullName>Improvement Needed</fullName>
                </value>
                <value>
                    <fullName>Unsatisfactory</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <description>Calculated question score.</description>
        <formula>CASE(Response__c , "Yes", 1,
                    "No", 0,
                    "N/A", 0,
                    "Met Expectations", ( Max_Score__c * 1),
                    "Partially Met Expectations", (Max_Score__c * (1/2)),
                    "Did Not Meet Expectations", 0,
                    "Remarkable", (Max_Score__c * 1),
                    "Often Exceeds Expectations", (Max_Score__c * (4/5)),
                    "Expectations Met", (Max_Score__c * (3/5)),
                    "Improvement Needed", (Max_Score__c * (2/5)),
                    "Unsatisfactory", (Max_Score__c * (1/5)),
                     0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <description>For each coaching session there are a set of questions that need to be answered.  The questions are loaded from a question bank (Coaching Questions) and individual responses are recorded here.</description>
    <label>Coaching Session Question</label>
    <nameField>
        <displayFormat>CSQ-{00000}</displayFormat>
        <label>Coaching Session Questions ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Coaching Session Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>Coaching_Session__c</columns>
        <columns>NAME</columns>
        <columns>Question_Number__c</columns>
        <columns>Coaching_Question__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <validationRules>
        <fullName>QuestionResponseScale_NoChange</fullName>
        <active>true</active>
        <description>Enforcement for all users that they cannot change the response scale on a question once it has been loaded as defined in the question bank.</description>
        <errorConditionFormula>ISCHANGED( Response_Scale__c )</errorConditionFormula>
        <errorDisplayField>Coaching_Question__c</errorDisplayField>
        <errorMessage>Response scale cannot be changed.  This question was loaded as it was defined in the question bank.  Press cancel and try again.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Session_is_Submitted</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$Setup.Coaching_Form_Admin__c.Id__c &lt;&gt; $User.Id,
$User.Id &lt;&gt; Coaching_Session__r.CreatedById 
)</errorConditionFormula>
        <errorMessage>Session is locked. Please contact your QA Evaluator.</errorMessage>
    </validationRules>
</CustomObject>